# sdmx

./: .clippy.toml  .git-blame-ignore-revs  .gitignore  Cargo.toml  README.md
.github/workflows/: audit.yml  docs.yml  main.yml
crates/my-crate/: Cargo.toml
crates/my-crate/src/: lib.rs
crates/sdmx/: CHANGELOG.md  Cargo.toml  README.md
crates/sdmx-de-tests/: Cargo.toml
crates/sdmx-de-tests/files/: metadata_sample02.json  sample01.json  sample02.json
crates/sdmx-de-tests/src/: lib.rs
crates/sdmx/src/: common.rs  data.rs  lib.rs  metadata.rs  structure.rs
crates/sdmx/src/structure/: all.rs  common.rs  constraints.rs  test.txt
crates/sdmx_csv/: Cargo.toml  README.md
crates/sdmx_csv/src/: lib.rs
crates/sdmx_json/: CHANGELOG.md  Cargo.toml  README.md
crates/sdmx_json/src/: common.rs  data.rs  lib.rs  metadata.rs  primitives.rs
crates/sdmx_json/src/macros/: artefact.rs  extendable.rs  item.rs  item_scheme.rs  mod.rs
crates/sdmx_json/src/structure/: all.rs  common.rs  constraints.rs  mod.rs  traits.rs
crates/sdmx_json_de_tests/: Cargo.toml
crates/sdmx_json_de_tests/files/: data_sample01.json  data_sample02.json  metadata_sample03.json  structure_sample02.json
crates/sdmx_json_de_tests/files/data/: twg-constructed-sample-full.json
crates/sdmx_json_de_tests/files/metadata/: twg-generated-sample.json
crates/sdmx_json_de_tests/files/structure/: twg-generated-sample.json
crates/sdmx_json_de_tests/src/: lib.rs
