[package]
name = "sdmx"
version = "0.1.0"
authors = ["Samantha Nguyen <contact@samanthanguyen.me>"]
description = "A Rust implementation of SDMX (Statistical Data and Metadata eXchange) using Serde"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/neoncitylights/sdmx"

edition = "2021"
rust-version = "1.76.0"

keywords = []
categories = []

include = ["src", "LICENSE*"]
