[package]
name = "sdmx_csv"
version = "0.2.0"
authors = ["Samantha Nguyen <contact@samanthanguyen.me>"]
description = "A Rust implementation of SDMX-CSV (Statistical Data and Metadata eXchange) using Serde"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/neoncitylights/sdmx"

edition = "2021"
rust-version = "1.76.0"

keywords = ["sdmx"]
categories = [
	"encoding",
	"parsing"
]

include = ["src", "LICENSE*"]

[dependencies]
csv = {version = "1.3.1"}
serde = { version = "1.0.216", features = ["derive"]}
