[package]
name = "sdmx_json"
version = "0.6.2"
authors = ["Samantha Nguyen <contact@samanthanguyen.me>"]
description = "A Rust implementation of SDMX-JSON (Statistical Data and Metadata eXchange) using Serde"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/neoncitylights/sdmx"

edition = "2021"
rust-version = "1.76.0"

keywords = ["sdmx"]
categories = [
	"encoding",
	"parsing"
]

include = ["src", "LICENSE*"]

[dependencies]
serde = { version = "1.0.216", features = ["derive"]}
serde_json = "1.0.133"
serde_with = "3.11.0"
